# rust-bucks

./: AGENTS.md  Cargo.toml  LICENSE  README.md
config/: default.toml
migrations/: 0000_create_orders.sql
src/: app.rs  main.rs
src/application/orders/: cancel.rs  create.rs  dto.rs  get.rs  mod.rs
src/config/: settings.rs
src/domain/order/: entity.rs  errors.rs  mod.rs  repository.rs  state.rs
src/http/: mod.rs  routes.rs  state.rs
src/http/handlers/: metrics.rs  mod.rs
src/http/handlers/orders/: cancel.rs  create.rs  dto.rs  error.rs  get.rs  mod.rs
src/http/middleware/: concurrency_limit.rs  mod.rs  request_id.rs
src/infrastructure/db/: sqlite.rs
src/infrastructure/repositories/: mod.rs  sqlite_order_repository.rs
src/observability/: tracing.rs
src/shutdown/: signal.rs
